# dotfiles

./: .XCompose  .XCompose-ordering  .XCompose-unicode  .Xdefaults  .abcde.conf  .gitattributes.global  .gitconfig  .gitconfig.fsck.skiplist  .gitignore  .gitignore.global  .iex.exs  .inputrc  .nrepl-history  .psqlrc  .tmux.conf  .xbindkeysrc.scm  .xsession  LICENSE.md  README.md  cuberoot.dc  cuberoot.dc.expected  rsync.filters  tsa-fine.dc  utf8.txt
.XCompose.d/: .XCompose  greek  ligatures  ordering
.emacs.d/: .gitignore  custom.el  early-packages.el  init.el
.ghc/: ghci.conf
.githooks/: commit-msg  helpers  pre-push
.irssi/: config  default.theme
.lein/: profiles.clj
.pg/: locks.sql
.python/: startup
.tmuxinator/: datomic.yml  dns.yml  forever.yml  ghcihist.yml  httproxy.yml  mounts.yml  nginx.yml  syn.yml  tls.yml  tuya-mqtt.yml
.urxvt/: font-switch  set-scrollback
.vim/: .gitignore  CSSify.vim  alpine.vim  bundles.vim  context-keys.vim  vimrc  vundle-compatibility.vim
.xmonad/: .ghci  .ghci.nostack  .gitignore  build  stack.yaml  xmobarrc  xmonad-config.cabal  xmonad.hs
.xmonad/lib/: CompatibilityShims.hs  Superscripts.hs
.zsh/: .gitignore  .zsh_aliases  .zsh_aliases-  .zsh_aliases_mr-  .zsh_bluetooth-  .zsh_bracketed_paste_compatibility  .zsh_checkconfig  .zsh_colors  .zsh_completion  .zsh_completion-  .zsh_dns  .zsh_functions  .zsh_functions-  .zsh_gpg-  .zsh_history_setup  .zsh_im  .zsh_locale  .zsh_make_backups  .zsh_make_backups-  .zsh_math  .zsh_nosefart  .zsh_paludis-  .zsh_prompt  .zsh_prompt-  .zsh_screen  .zsh_sleep  .zsh_ssh  fixfn  (+6 more)
(+338 files in other folders)
