name:                xmonad-config
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:
author:              Benjamin R. Haskell
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable xmonad-config
  main-is:             xmonad.hs
  other-modules:       Superscripts
  -- other-extensions:
  build-depends:       containers >=0.5 && <0.6
                     , xmonad ==0.12
                     , xmonad-contrib ==0.12
                     , X11 >=1.6 && <1.7
                     , directory
                     , utf8-string
                     , unix
  if impl(ghc >= 7.10)
    build-depends:     base == 4.8.*
  else
    build-depends:     base == 4.7.*
  hs-source-dirs:      . lib
  default-language:    Haskell2010
